<resources>
    <string name="app_name">BondoMan</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="Password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="jwr">JWR</string>
    <string name="logout">logout</string>
    <string name="title_scan">Scan</string>
    <string name="send_email">Send Email</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="randomizetransaction">RandomizeTransaction</string>
    <string name="twibbon">Twibbon</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="amount">Amount</string>
    <string name="title">Title</string>
    <string name="back">Back</string>
    <string name="album">Album</string>
    <string name="send">Send</string>
    <string name="previewimg">PreviewImg</string>
</resources>