<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_transaction_24"
        android:title="@string/title_transaction" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"
        />

    <item
        android:id="@+id/floatingNav"
        android:title=""
        />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/logout"
        android:title="@string/title_profile" />

</menu>