<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    >

    <TextView
        android:id="@+id/JWRText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/jwr"
        android:textColor="@color/gold"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/JWRText"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="120dp"
        android:autofillHints=""
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="12dp"
        android:background="@drawable/custom_input"
        android:paddingVertical="12dp"
        android:paddingHorizontal="8dp"

        />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:autofillHints=""
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailText"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="12dp"
        android:background="@drawable/custom_input"
        android:paddingVertical="12dp"
        android:paddingHorizontal="8dp"
        />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/remember_me"
        android:textColor="@color/gold"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        />
    
    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/rememberMe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:theme="@style/Theme.login"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/press_start_2p"
        android:paddingTop="12dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>